# chartscan

./: .gitignore  Cargo.toml  README.md  download.sh  err.out  log  log.out  requirements.txt  test
javascript/: index.js  package.json  parse.js  regions.js  retrieve_session.js
python/: download.py  regions.py
src/: 2022-05-30.csv  lib.rs  main.rs
src/spotify/: find.rs  fmt.rs  mod.rs  regions.rs  validate.rs
