[package]
name = "chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
lexical-core = { version = "0.8.5", features = ["format"] } 
time = "0.3.9"
regex = "1.5.6"